# raft-in-rust

./: .gitattributes  .travis.yml  Cargo.toml  README.md
ci/: install-grpc.sh  install-protobuf.sh
numero/: Cargo.toml
numero/src/: lib.rs
raft/: Cargo.toml  build.rs
raft/src/: election.rs  leader.rs  lib.rs  macros.rs  server.rs  storage.rs
raft/src/grpc/: leader.rs  mod.rs  server.rs
raft/src/protos/: mod.rs  raft.proto
raft/src/tarpc/: server.rs
