[package]
name = "raft"
version = "0.1.0"
authors = ["Tyler Mandry <tmandry@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
protobuf = "2.0"
futures = "0.1"
timer = "0.2.0"
rand = "0.6.1"
chrono = "*"
tokio = "*"

[build-dependencies]
protoc-grpcio = "0.3.1"
