[package]
name = "raft"
version = "0.1.0"
authors = ["Tyler Mandry <tmandry@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
protobuf = "2.0"
futures = "0.1"
futures_new = { package = "futures-preview", version = "0.3.0-alpha.12", features = ["compat", "tokio-compat"] }
bincode-transport = { git = "https://github.com/google/tarpc", package = "tarpc-bincode-transport" }
timer = "0.2.0"
rand = "0.6.1"
chrono = "*"
tokio = "*"
tokio-executor = "0.1"
tokio-timer = "0.2.10"

tarpc = { git = "https://github.com/google/tarpc", features = ["serde1"] }

[build-dependencies]
protoc-grpcio = "0.3.1"
